version/0.63/_sources/examples/gallery_examples/00-mapdl-examples/exhaust_manifold_thermal_stress.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/gallery_examples/00-mapdl-examples/exhaust_manifold_thermal_stress.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_gallery_examples_00-mapdl-examples_exhaust_manifold_thermal_stress.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_00-mapdl-examples_exhaust_manifold_thermal_stress.py:


.. _exhaust_mainfold_thermal_stress:

===============================================
Thermal-structural analysis of exhaust manifold
===============================================

**Summary**: This example illustrates how to map results from a CFD analysis and perform a Finite Element (FE) analysis.

Objective
~~~~~~~~~

In this example, we will perform an FE analysis to compute the thermal stresses developed in an exhaust manifold. The manifold is made of structural steel and the temperature distribution in it is obtained from a CFD run. We import this data and map it onto FE mesh to define thermal load at each node using Gaussian interpolation kernel.

.. image:: ../../../images/manifold.gif
   :align: center
   :width: 400
   :alt: Exhaust Manifold CFD Results

Procedure
~~~~~~~~~
* Launch MAPDL instance
* Import geometry, assign material properties, and generate FE mesh.
* Import temperature distribution and map it on FE mesh
* Define BCs and use imported temperature distribution to define thermal load.
* Solve the model and plot the results of interest.

Additional Packages used
~~~~~~~~~~~~~~~~~~~~~~~~
* `Numpy <https://numpy.org>`_ for using data as arrays
* `Pandas <https://pandas.pydata.org>`_ to import csv file (to install use: **pip install pandas**)
* `PyVista <https://docs.pyvista.org>`_ for performing Gauissian interpolation

Boundary Conditions
~~~~~~~~~~~~~~~~~~~
* Highlighted faces are fully constrained.

.. image:: ../../../images/manifold_boundary_conditions.png
   :align: center
   :width: 800
   :alt: Boundary Conditions used for FE Analysis

.. GENERATED FROM PYTHON SOURCE LINES 46-48

Import all necessary modules and launch an instance of MAPDL
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 48-60

.. code-block:: default


    import numpy as np
    import pandas as pd
    import pyvista as pv

    from ansys.mapdl.core import launch_mapdl
    from ansys.mapdl.core.examples import download_manifold_example_data

    # start mapdl
    mapdl = launch_mapdl()
    print(mapdl)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Product:             Ansys Mechanical Enterprise
    MAPDL Version:       22.2
    ansys.mapdl Version: 0.63.4





.. GENERATED FROM PYTHON SOURCE LINES 61-63

Import geometry, assign material properties and generate a mesh.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 63-94

.. code-block:: default


    # download the necessary files
    paths = download_manifold_example_data()
    geometry = paths["geometry"]
    mapping_data = paths["mapping_data"]

    # reset mapdl & import geometry
    mapdl.clear()
    mapdl.input(geometry)

    # Define element attributes
    # Second-order tetrahedral elements (SOLID187)
    mapdl.prep7()
    mapdl.et(1, "SOLID187")

    # Define material properties of structural steel
    E = 2e11  # Youngs modulus
    NU = 0.3  # Poisson's ratio
    CTE = 1.2e-5  # Coeff. of thermal expansion
    mapdl.mp("EX", 1, E)
    mapdl.mp("PRXY", 1, NU)
    mapdl.mp("ALPX", 1, CTE)

    # Define mesh controls and generate mesh
    mapdl.esize(0.0075)
    mapdl.vmesh("all")

    # Save mesh as VTK object
    print(mapdl.mesh)
    grid = mapdl.mesh.grid  # save mesh as a VTK object





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    ANSYS Mesh
      Number of Nodes:              87637
      Number of Elements:           44277
      Number of Element Types:      1
      Number of Node Components:    0
      Number of Element Components: 0





.. GENERATED FROM PYTHON SOURCE LINES 95-97

Import and map temperature data to FE mesh
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 97-121

.. code-block:: default


    # Import csv file and save data to a NumPy array
    temperature_file = pd.read_csv(mapping_data, sep=",", header=None, low_memory=False)
    temperature_data = temperature_file.values  # Save data to a NumPy array
    nd_temp_data = temperature_data[1:, 1:].astype(float)  # Change data type to Float

    # Map temperature data to FE mesh
    # Convert imported data into PolyData format
    wrapped = pv.PolyData(nd_temp_data[:, :3])  # Convert NumPy array to PolyData format
    wrapped["temperature"] = nd_temp_data[
        :, 3
    ]  # Add a scalar variable 'temperature' to PolyData

    # Perform data mapping
    inter_grid = grid.interpolate(
        wrapped, sharpness=5, radius=0.0001, strategy="closest_point", progress_bar=True
    )  # Map the imported data to MAPDL grid
    inter_grid.plot(show_edges=False)  # Plot the interpolated data on MAPDL grid
    temperature_load_val = pv.convert_array(
        pv.convert_array(inter_grid.active_scalars)
    )  # Save temperatures interpolated to each node as NumPy array
    node_num = inter_grid.point_data["ansys_node_num"]  # Save node numbers as NumPy array





.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_exhaust_manifold_thermal_stress_001.png
   :alt: exhaust manifold thermal stress
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_exhaust_manifold_thermal_stress_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

      0%|          [00:00<?]    Interpolating:   0%|          [00:00<?]    Interpolating: 100%|##########[00:00<00:00]    Interpolating: 100%|##########[00:00<00:00]    Interpolating: 100%|##########[00:00<00:00]




.. GENERATED FROM PYTHON SOURCE LINES 122-124

Apply loads and boundary conditions and solve the model
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 124-153

.. code-block:: default


    # Read all nodal coords. to an array & extract the X and Y min. bounds
    array_nodes = mapdl.mesh.nodes
    Xmin = np.amin(array_nodes[:, 0])
    Ymin = np.amin(array_nodes[:, 1])

    # Enter /SOLU processor to apply loads and BCs
    mapdl.finish()
    mapdl.slashsolu()

    # Enter non-interactive mode to assign thermal load at each node using imported data
    with mapdl.non_interactive:
        for node, temp in zip(node_num, temperature_load_val):
            mapdl.bf(node, "TEMP", temp)
    # Use the X and Y min. bounds to select nodes from five surfaces that are to be fixed and created a component and fix all DOFs.
    mapdl.nsel("s", "LOC", "X", Xmin)  # Select all nodes whose X coord.=Xmin
    mapdl.nsel(
        "a", "LOC", "Y", Ymin
    )  # Select all nodes whose Y coord.=Ymin and add to previous selection
    mapdl.cm("fixed_nodes", "NODE")  # Create a nodal component 'fixed_nodes'
    mapdl.allsel()  # Revert active selection to full model
    mapdl.d(
        "fixed_nodes", "all", 0
    )  # Impose fully fixed constraint on component created earlier

    # Solve the model
    output = mapdl.solve()
    print(output)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    *****  MAPDL SOLVE    COMMAND  *****

     *** WARNING ***                         CP =      81.000   TIME= 16:24:11
     Previous testing revealed that 123 of the 44277 selected elements       
     violate shape warning limits.  To review warning messages, please see   
     the output or error file, or issue the CHECK command.                   

     *** NOTE ***                            CP =      81.000   TIME= 16:24:11
     The model data was checked and warning messages were found.             
      Please review output or errors file ( /file.err ) for these warning    
     messages.                                                               

     *** SELECTION OF ELEMENT TECHNOLOGIES FOR APPLICABLE ELEMENTS ***
                    ---GIVE SUGGESTIONS ONLY---

     ELEMENT TYPE         1 IS SOLID187. IT IS NOT ASSOCIATED WITH FULLY INCOMPRESSIBLE
     HYPERELASTIC MATERIALS. NO SUGGESTION IS AVAILABLE.



     *** MAPDL - ENGINEERING ANALYSIS SYSTEM  RELEASE                  22.2     ***
     Ansys Mechanical Enterprise                       
     00000000  VERSION=LINUX x64     16:24:11  APR 04, 2023 CP=     81.019

      File: D:\AICs\PyAnsys\Getting Started With PyMAPDL\Dataflow Between Python an



                           S O L U T I O N   O P T I O N S

       PROBLEM DIMENSIONALITY. . . . . . . . . . . . .3-D                  
       DEGREES OF FREEDOM. . . . . . UX   UY   UZ  
       ANALYSIS TYPE . . . . . . . . . . . . . . . . .STATIC (STEADY-STATE)
       GLOBALLY ASSEMBLED MATRIX . . . . . . . . . . .SYMMETRIC  

     *** NOTE ***                            CP =      81.077   TIME= 16:24:11
     Present time 0 is less than or equal to the previous time.  Time will   
     default to 1.                                                           

     *** NOTE ***                            CP =      81.078   TIME= 16:24:11
     The conditions for direct assembly have been met.  No .emat or .erot    
     files will be produced.                                                 

                          L O A D   S T E P   O P T I O N S

       LOAD STEP NUMBER. . . . . . . . . . . . . . . .     1
       TIME AT END OF THE LOAD STEP. . . . . . . . . .  1.0000    
       NUMBER OF SUBSTEPS. . . . . . . . . . . . . . .     1
       STEP CHANGE BOUNDARY CONDITIONS . . . . . . . .    NO
       PRINT OUTPUT CONTROLS . . . . . . . . . . . . .NO PRINTOUT
       DATABASE OUTPUT CONTROLS. . . . . . . . . . . .ALL DATA WRITTEN
                                                      FOR THE LAST SUBSTEP


     SOLUTION MONITORING INFO IS WRITTEN TO FILE= file.mntr                                                                                                                                                                                                                                                           


     Range of element maximum matrix coefficients in global coordinates
     Maximum = 1.562734624E+11 at element 6128.                              
     Minimum = 304040659 at element 27522.                                   

       *** ELEMENT MATRIX FORMULATION TIMES
         TYPE    NUMBER   ENAME      TOTAL CP  AVE CP

            1     44277  SOLID187      6.232   0.000141
     Time at end of element matrix formulation CP = 85.4562302.              

     SPARSE MATRIX DIRECT SOLVER.
      Number of equations =      252033,    Maximum wavefront =    213

     *** NOTE ***                            CP =      87.965   TIME= 16:24:16
     The initial memory allocation (-m) has been exceeded.                   
      Supplemental memory allocations are being used.                        
      Memory allocated for solver              =  1066.936 MB
      Memory required for in-core solution     =  1023.691 MB
      Memory required for out-of-core solution =   355.872 MB

     *** NOTE ***                            CP =      87.965   TIME= 16:24:16
     The Sparse Matrix Solver is currently running in the in-core memory     
     mode.  This memory mode uses the most amount of memory in order to      
     avoid using the hard drive as much as possible, which most often        
     results in the fastest solution time.  This mode is recommended if      
     enough physical memory is present to accommodate all of the solver      
     data.                                                                   
     Sparse solver maximum pivot= 2.425504222E+11 at node 56420 UY.          
     Sparse solver minimum pivot= 149830610 at node 53393 UZ.                
     Sparse solver minimum pivot in absolute value= 149830610 at node 53393  
     UZ.                                                                     

       *** ELEMENT RESULT CALCULATION TIMES
         TYPE    NUMBER   ENAME      TOTAL CP  AVE CP

            1     44277  SOLID187      7.243   0.000164

       *** NODAL LOAD CALCULATION TIMES
         TYPE    NUMBER   ENAME      TOTAL CP  AVE CP

            1     44277  SOLID187      1.925   0.000043
     *** LOAD STEP     1   SUBSTEP     1  COMPLETED.    CUM ITER =      1
     *** TIME =   1.00000         TIME INC =   1.00000      NEW TRIANG MATRIX


     *** MAPDL BINARY FILE STATISTICS
      BUFFER SIZE USED= 16384
          117.312 MB WRITTEN ON ASSEMBLED MATRIX FILE: file.full
           41.312 MB WRITTEN ON RESULTS FILE: file.rst




.. GENERATED FROM PYTHON SOURCE LINES 154-156

Post-processing
~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 156-162

.. code-block:: default


    # Enter post-processor
    mapdl.post1()
    mapdl.set(1, 1)  # Select first load step
    mapdl.post_processing.plot_nodal_eqv_stress()  # Plot equivalent stress




.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_exhaust_manifold_thermal_stress_002.png
   :alt: exhaust manifold thermal stress
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_exhaust_manifold_thermal_stress_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 163-165

Exit MAPDL instance
~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 165-167

.. code-block:: default


    mapdl.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  22.208 seconds)


.. _sphx_glr_download_examples_gallery_examples_00-mapdl-examples_exhaust_manifold_thermal_stress.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: exhaust_manifold_thermal_stress.py <exhaust_manifold_thermal_stress.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: exhaust_manifold_thermal_stress.ipynb <exhaust_manifold_thermal_stress.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
